--- a/build.gradle
+++ b/build.gradle
@@ -1,10 +1,10 @@
 plugins {
-    id 'org.springframework.boot' version '2.4.3'
-    id 'io.spring.dependency-management' version '1.0.11.RELEASE'
+    id 'org.springframework.boot' version '2.4.1'
+    id 'io.spring.dependency-management' version '1.0.10.RELEASE'
 }
 
 group 'org.cegeka.com'
-version '1.0-SNAPSHOT'
+version '1.0.0'
 
 apply plugin: 'java'
 apply plugin: 'io.spring.dependency-management'
@@ -14,33 +14,44 @@ repositories {
     mavenCentral()
 }
 
-compileJava {
-    sourceCompatibility = 11
-    targetCompatibility = 11
+configurations {
+    compileOnly {
+        extendsFrom annotationProcessor
+    }
 }
 
+//compileJava {
+//    sourceCompatibility = 17
+//    targetCompatibility = 17
+//}
+
 dependencies {
+
+    implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation 'org.springframework.boot:spring-boot-starter-validation'
+
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+    implementation 'org.springframework.boot:spring-boot-starter-data-jdbc'
+//    implementation 'org.liquibase:liquibase-core'
+    implementation 'com.h2database:h2'
 
     compileOnly 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
 
-    implementation ('org.springframework.boot:spring-boot-starter-web')
-    implementation 'org.springframework.boot:spring-boot-starter-validation'
-    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+    testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    testImplementation 'org.assertj:assertj-core:3.24.2'
+    testImplementation 'com.tngtech.archunit:archunit-junit5:1.0.0'
 
-    testImplementation('org.springframework.boot:spring-boot-starter-test') {
-        exclude group: 'junit' // excluding junit 4
+    compileOnly 'org.projectlombok:lombok:1.18.24'
+    annotationProcessor 'org.projectlombok:lombok:1.18.24' // this will fix the error
+
     }
-    testImplementation 'org.junit.jupiter:junit-jupiter-engine:5.0.1'
-    testImplementation 'org.mockito:mockito-junit-jupiter:2.23.0'
-    testImplementation 'com.tngtech.archunit:archunit:0.16.0'
-    testImplementation 'org.junit.platform:junit-platform-launcher:1.4.2'
-    testImplementation 'com.h2database:h2'
-
-    runtimeOnly 'com.h2database:h2'
-
-}
 
 test {
     useJUnitPlatform()
+}
+dependencyManagement {
+    imports {
+        mavenBom('org.springframework.boot:spring-boot-dependencies:2.4.1')
+    }
 }
